[project]
name = "gdextension-cli"
version = "0.0.1"
description = "A command line interface for Godot's GDExtension"
readme = "README.md"
authors = [
    { name = "Sören Spindler", email = "soeren.s89@gmail.com" }
]
classifiers = [
    "Programming Language :: Python :: 3"
]
requires-python = ">=3.8"
dependencies = [

]

[project.urls]
"Homepage" = "https://github.com/3LK3/gdextension-cli"
"Bug Tracker" = "https://github.com/3LK3/gdextension-cli/issues"

[project.scripts]
gdextension-cli = "gdextension_cli:main_cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gdextension_cli"]
